doc: missed some changes
(cherry picked from commit f1ad5f654ad24cdc2fb87a18906ac4f291745d59)